# budet

./: .env.example  CLAUDE.md  CNAME  MIGRATION_TO_SERVER.md  README-DEPLOY.md  README.md  README.txt  app.py  deploy-python.sh  deploy-to-server.sh  deploy.sh  fix-and-deploy.sh  fix-frontend.sh  fix-svelte-config.sh  fix-typescript.sh  index.html  manifest.json  service-worker.js  services.py  setup-ssl.sh  test-build.sh  update-backend.sh  update-frontend.sh  update-server.sh
.claude/: settings.local.json
backend/: debug.sh  go.mod  main.go  requirements.txt  run.py
backend-py/: .env.example  README.md  budget-api.service  pyproject.toml  run.py
backend-py/app/: __init__.py  auth.py  categories.py  db.py  main.py  migrations.sql  models.py  sync.py  transactions.py
backend-py/db/: migrate.sql
backend/api/: auth.go  entities.go  sync.go
backend/app/: auth.py  db.py  deps.py  jwt_utils.py  main.py  models.py  sync.py
backend/db/: migrate.sql  sqlite.go
backend/internal/: jwt.go  models.go
deploy/: README.md  budget-api.service  budget-nginx.conf  budget.service  check-certbot.sh  deploy.sh  health-monitor.sh  nginx-budget.conf  quick-deploy.sh  ssl-setup-centos.sh  ssl-setup.sh
frontend/: package.json  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json
frontend/src/: app.html  service-worker.js
frontend/src/lib/: api.ts  calc.ts  db.ts  models.ts  stores.ts  styles.css
frontend/src/pwa/: manifest.webmanifest
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/src/routes/add/: +page.svelte
frontend/static/: manifest.webmanifest
static/: app.js  grid.js  simple.js  styles.css
templates/: _table.html  _table_clean.html  _table_min.html  base.html  grid.html  index.html  merchants.html  rules.html  simple.html  simple_clean.html
(+7 files in other folders)
